- history for Clinics and Specialists now includes their review and feedback items
- optimized queries made for the specialists form, clinics form, navbar,
specialists index, and clinic index, significantly improving page load
speeds
  - specialists/index: ~ 1000 ms improvement
  - clinics/index: ~ 1000 ms improvement
  - specialists/form: ~ 22000 ms improvement
  - clinics/form: ~ 1100 ms improvement

### Fixed
- CR:  Clinic location/specialist office rearranging issue now fixed.
- "Latest Specialists and Clinics Updates" now hides specialists/clinics updates if the specialty and city of the clinic/specialist does not match with the local referral area of the Division for that specialty.
- User edit form now correctly places users into divisions.
- User edit form now disables HTML autocomplete.
- On Division edit pages, Internet Explorer browsers now correctly render specialty/city checkboxes in the local referral area table.
- Content Item pages now cache correctly so that different versions of the page are shown for admins and users.
- Referral form feedback button now disables during submission to prevent duplicate submissions.
- Error on referral form update
- Correct version of specialist office now used in specialist and clinic updates
- S3 uses SSL to serve attachment
- Can enter addresses for new specialist offices
- Divisional search data no longer browser cached
- Updating capacities and focuses for specialists and clinics with more than one
specialty
- Removing all areas of practice from specialists and clinics
- System notification recipients standardized and configurable via
environment variables
- CR: 'Physicians who see patients' heading now only appears when there
are actually physicians attending

### Removed:
- Removed old reporting interface graphs from the codebase that were already disabled by earlier developers.
- Option to delete review item from index view.